# CPPAPIDESIGN

./: .gitignore  CMakeLists.txt  README.md
02_Qualities/callback_instance/: main.cpp  modulea.cpp  modulea.h  moduleb.cpp  moduleb.h
02_Qualities/callback_static/: main.cpp  modulea.h  moduleb.cpp  moduleb.h
02_Qualities/coord2d_template/: main.cpp
02_Qualities/hide_class/: main.cpp
02_Qualities/shared_pointer/: main.cpp
03_Patterns/adapter/: original.h
03_Patterns/factory_simple/: main.cpp  rendererfactory.h
03_Patterns/singleton/: singleton.cpp
04_Design/named_parameters/: main.cpp
06_Cpp_Style/constructors/: array.cpp
API/: CMakeLists.txt  LICENSE.txt  README.txt  configure.sh
API/02_Qualities/: CMakeLists.txt
API/02_Qualities/callback_instance/: CMakeLists.txt  main.cpp  modulea.cpp  modulea.h  moduleb.cpp  moduleb.h
API/02_Qualities/callback_static/: CMakeLists.txt  main.cpp  modulea.cpp  modulea.h  moduleb.cpp  moduleb.h
API/02_Qualities/coord2d_template/: CMakeLists.txt  coord2d.h  coord2d_detail.h  main.cpp
API/02_Qualities/hide_class/: CMakeLists.txt  fireworks.cpp  fireworks.h  main.cpp
API/02_Qualities/shared_pointer/: CMakeLists.txt  main.cpp  myobject.cpp  myobject.h
API/03_Patterns/: CMakeLists.txt
API/03_Patterns/adapter/: CMakeLists.txt  adapter.cpp  main.cpp  original.cpp  original.h
API/04_Design/: CMakeLists.txt
API/05_Styles/: CMakeLists.txt
API/06_Cpp_Style/: CMakeLists.txt
API/07_Performance/: CMakeLists.txt
API/08_Versioning/: CMakeLists.txt
API/09_Documentation/: CMakeLists.txt
API/10_Testing/: CMakeLists.txt
API/11_Scripting/: CMakeLists.txt
API/12_Extensibility/: CMakeLists.txt
API/AA_Libraries/: CMakeLists.txt
C++/: CMakeLists.txt
C++/c01_code/: CMakeLists.txt
C++/c01_code/01_helloworld/: CMakeLists.txt
C++/c01_code/02_namespaces/: CMakeLists.txt  namespaces.cpp  namespaces.h  usingnamespaces.cpp
C++/c01_code/03_hellovariables/: CMakeLists.txt  hellovariables.cpp
C++/c01_code/04_typetest/: CMakeLists.txt  typetest.cpp
C++/c01_code/05_StronglyTypedEnums/: CMakeLists.txt  StronglyTypedEnums.cpp
C++/c01_code/06_structtest/: CMakeLists.txt  employeestruct.h  structtest.cpp
C++/c01_code/07_std_array/: CMakeLists.txt  std_array.cpp
C++/c01_code/08_AlternativeFunctionSyntax/: AlternativeFunctionSyntax.cpp  CMakeLists.txt
C++/c01_code/09_NullPointerConstant/: CMakeLists.txt  NullPointerConstant.cpp
C++/c01_code/10_stringtest/: CMakeLists.txt  smart_pointer.cpp
C++/c01_code/11_Exceptions/: CMakeLists.txt  Exceptions.cpp  MyException.cpp
C++/c01_code/12_ConstArg/: CMakeLists.txt  ConstArg.cpp
C++/c01_code/13_AirlineTicket/: AirlineTicket.h  AirlineTicketTest.cpp  CMakeLists.txt
C++/c01_code/14_vectortest/: CMakeLists.txt  myVectorTest.cpp  vectortest.cpp
C++/c01_code/15_EmployeeDB/: CMakeLists.txt  DatabaseTest.cpp  Employee.h
C++/c01_code/AirlineTicket/: AirlineTicketTest.cpp  CMakeLists.txt
C++/c01_code/AirlineTicket2/: Account.cpp  Account.h  CMakeLists.txt  main.cpp
C++/c01_code/c11_code/: CMakeLists.txt
C++/c01_code/c11_code/FriendFunctionTemplates/: GridTest.cpp
C++/c01_code/c11_code/FunctionTemplate/: SpreadsheetCell.h
C++/c01_code/c11_code/GameBoard/: GameBoard.cpp  GameBoardTest.cpp
C++/c01_code/c11_code/Grid/ExplicitInstantiations/: Grid.h
C++/c01_code/c11_code/Grid/MethodsInSeparateHeader/: SpreadsheetCell.cpp
C++/c01_code/c11_code/Grid/MethodsInSource/: Grid.h
C++/c01_code/c11_code/GridInheritance/: GameBoard.h
C++/c01_code/c11_code/GridNonType/: Grid.h  GridTest.cpp
C++/c01_code/c11_code/GridNonTypeDefault/: Grid.h
C++/c01_code/c11_code/GridSpecialization/: Grid.h
C++/c01_code/c11_code/MethodTemplates/: Grid.h
C++/c01_code/stringtest/: CMakeLists.txt  stringtest.cpp  stringtest2.cpp
C++/c01_code/typetest/: CMakeLists.txt
C++/c01_code/vectortest/: CMakeLists.txt  vectortest.cpp  vectortest2.cpp  vectortest3.cpp  vectortest5.cpp  vectortest6.cpp  vectortest7.cpp
CESS/: CMakeLists.txt  example0.c  example1.c  example12.c  example15.c  example16.c  example17.c  example18.c  example19.c  example2.c  example20.c  example23.c  example26.c  example29.c  example3.c  example33.c  example34.c  example35.c  example36.c  example37.c  example38.c  example39.c  example4.c  example40.c  example5.c  example6.c  example7.c  example8.c  example9.c
CPPESS/: CMakeLists.txt  example.cpp
CPPESS/Array/: CMakeLists.txt
CPPESS/Functions/: main.cpp
CPPESS/Matrix/: CMakeLists.txt  Matrix.cpp  Matrix.h  main.cpp
CPPESS/Pointers/: CMakeLists.txt  main.cpp
CPPESS/References/: CMakeLists.txt  main.cpp
CPPESS/Sample/: CMakeLists.txt  sample.cpp
CPPESS/Singleton/: CMakeLists.txt  Singleton.cpp
CPPESS/Twitter/: CMakeLists.txt  Twitter.cpp  Twitter.h  main.cpp
Extra/libxml++-3.0.0/: ChangeLog  Makefile.in  config.h.in  configure
(+842 files in other folders)
