add_executable(example0 example0.c)
add_executable(example1 example1.c)
add_executable(example2 example2.c)
add_executable(example3 example3.c)
add_executable(example4 example4.c)
add_executable(example5 example5.c)
add_executable(example6 example6.c)
add_executable(example7 example7.c)
add_executable(example8 example8.c)
add_executable(example9 example9.c)
add_executable(example10 example10.c)
add_executable(example11 example11.c)
add_executable(example12 example12.c)
add_executable(example13 example13.c)
add_executable(example14 example14.c)
add_executable(example15 example15.c)
add_executable(example16 example16.c)
add_executable(example17 example17.c)
add_executable(example18 example18.c)
add_executable(example19 example19.c)
add_executable(example20 example20.c)