add_subdirectory(01_helloworld)          
add_subdirectory(07_std_array)                  
add_subdirectory(13_AirlineTicket )         
add_subdirectory(namespaces   )        
add_subdirectory(typetest)
add_subdirectory(02_namespaces   )       
add_subdirectory(08_AlternativeFunctionSyntax  )
add_subdirectory(14_vectortest         )     
add_subdirectory(ConstArg   )     
add_subdirectory(NullPointerConstant)
add_subdirectory(03_hellovariables   )   
add_subdirectory(09_NullPointerConstant   )     
add_subdirectory(15_EmployeeDB     )         
add_subdirectory(EmployeeDB     ) 
add_subdirectory(std_array)
add_subdirectory(04_typetest   )         
add_subdirectory(10_stringtest   )              
add_subdirectory(AirlineTicket    )          
add_subdirectory(Exceptions     ) 
add_subdirectory(stringtest)
add_subdirectory(05_StronglyTypedEnums ) 
add_subdirectory(11_Exceptions     )            
add_subdirectory(AlternativeFunctionSyntax  )
add_subdirectory(hellovariables  )
add_subdirectory(StronglyTypedEnums)
add_subdirectory(06_structtest  )        
add_subdirectory(12_ConstArg    )               
add_subdirectory(c11_code       )            
add_subdirectory(helloworld    )  
add_subdirectory(structtest)
add_subdirectory(AirlineTicket2)
add_subdirectory(vectortest)



